--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,26 @@ vendor/
 
 # Idea
 .idea
+
+node_modules
+/dist
+
+
+# local env files
+frontend/.env.local
+frontend/.env.*.local
+
+# Log files
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+/*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
