--- a/.gitignore
+++ b/.gitignore
@@ -17,19 +17,19 @@ vendor/
 # Idea
 .idea
 
-node_modules
-/dist
+**/node_modules
+**/dist
 
 
 # local env files
-frontend/.env.local
-frontend/.env.*.local
+**/.env.local
+**/.env.*.local
 
 # Log files
-frontend/npm-debug.log*
-frontend/yarn-debug.log*
-frontend/yarn-error.log*
-frontend/pnpm-debug.log*
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/pnpm-debug.log*
 
 # Editor directories and files
 .idea
