--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
+    "script-ext-html-webpack-plugin": "^2.1.5",
     "svg-sprite-loader": "^5.2.1",
     "svgo": "^1.3.2",
     "vue-template-compiler": "^2.6.11"
